<resources>
    <string name="app_name">Geo</string>
    <string name="btn_location">Location</string>
    <string name="btn_service">Service</string>
    <string name="btn_maps">Maps</string>
    <string name="title_location">Location</string>
    <string name="btn_get_current_location">Get current location</string>
    <string name="btn_watch_location">Watch location</string>
    <string name="title_service">Service</string>
    <string name="btn_start_service">Start service</string>
    <string name="btn_stop_service">Stop service</string>
    <string name="btn_subscribe_service">Subscribe service</string>
    <string name="btn_unsubscribe_service">Unsubscribe service</string>
    <string name="lat">Lat: No data</string>
    <string name="lat_data">Lat: %.4f</string>
    <string name="lon">Lon No data</string>
    <string name="lon_data">Lon %.4f</string>
    <string name="title_maps">Maps</string>
    <string name="btn_follow_location">Follow location</string>
    <string name="btn_stop_follow_location">Stop follow location</string>
    <string name="btn_add_marker">Add marker</string>
    <string name="btn_add_circle">Add circle</string>
    <string name="btn_add_poly">Add polygon</string>
    <string name="btn_clear">Clear map</string>
</resources>